fixed mode button overflow on big screens : reverted

--- a/front-end/src/components/UI/modeButton/mode-button.css
+++ b/front-end/src/components/UI/modeButton/mode-button.css
@@ -13,10 +13,6 @@
   border-radius: 0 0 0 100%;
   overflow: hidden;
 
-  @media (width >= 1440px) {
-    left: 1536px;
-  }
-
   & label {
     @extend %flex,
       %align-center,
